@@ -89,6 +89,23 @@ For quick response answer on the E-Mail with preserved ID in subject.</en>
 
 Для быстрого ответа на сообщение ответьте на это письмо сохранив идентификатор в теме.</ru>
 	</p>
+	<p>
+		<sys>email.notification.invoice.paid</sys>
+		<en>Paid invoice number: {}
+Customer: {}
+Month: {}
+Amount: {}
+Created Date: {}
+
+Open process: {}</en>
+		<ru>Оплачен счёт номер: {}
+Контрагент: {}
+Месяц: {}
+Сумма: {}
+Дата создания: {}
+
+Открыть процесс: {}</ru>
+	</p>
 	<p><en>Incoming message #</en><ru>Входящее сообщение #</ru></p>
 	<p>
 		<sys>email.recipients.input.hint</sys>
