@@ -1,1 +1,2 @@
 A: Plugin Subscription. Configurable predefined subscription in 'Price Calculator'. https://bgerp.org/doc/3.0/manual/plugin/bil/subscription/index.html#setup-price-calculator
+TODODOC A: Plugin Email. Notifications about paid invoices. https://bgerp.org/doc/3.0/manual/plugin/msg/email/index.html#setup-process-type-change-notification
